<resources>
    <string name="app_name">fakepixiv</string>
    <string name="login_hint_id">ID或邮箱</string>
    <string name="login_hint_psw">密码</string>
    <string name="btn_login">登录</string>
    <string name="login_forget_tips">忘记登录资料？</string>
    <string name="btn_register">未持有账号的用户请点击这里</string>
    <string name="title_register">输入昵称</string>
    <string name="login_hint_nick">昵称</string>
    <string name="btn_start">开始</string>
    <string name="register_nick_tips">昵称可随时变更</string>
    <string name="register_pact">服务条款</string>
    <string name="register_help">需要帮忙吗？</string>
    <string name="msg_empty_data">暂时没有数据</string>
    <string name="title_main">主页</string>
    <string name="tab_home">主页</string>
    <string name="tab_news">最新</string>
    <string name="tab_search">搜索</string>
    <string name="nav_upload">投稿作品</string>
    <string name="nav_works">你的作品</string>
    <string name="nav_collection">收藏</string>
    <string name="nav_history">浏览记录</string>
    <string name="nav_marker">小说标签</string>
    <string name="nav_mine">我的</string>
    <string name="nav_following">关注</string>
    <string name="nav_follower">粉丝</string>
    <string name="nav_friend">好P友</string>
    <string name="nav_others">其他</string>
    <string name="nav_feedback">问题反馈</string>
    <string name="nav_help">常见问题</string>
    <string name="nav_setting">设置</string>
    <string name="nav_filter_setting">屏蔽设定</string>
    <string name="about_vip">关于pixiv高级会员</string>
    <string name="tab_illust">插画</string>
    <string name="tab_comic">漫画</string>
    <string name="tab_novel">小说</string>
    <string name="tab_pic">插画·漫画</string>
    <string name="tab_user">用户</string>
    <string name="tab_follower">关注者</string>
    <string name="tab_friend">好P友</string>
    <string name="tab_public">公开</string>
    <string name="tab_private">私人</string>
    <string name="title_rank">排行榜</string>
    <string name="read_more">查看更多</string>
    <string name="title_live">人气直播</string>
    <string name="tag_live">LIVE</string>
    <string name="title_recommend">为你推荐</string>
    <string name="tag_new">New</string>
    <string name="error_default_title">加载失败</string>
    <string name="error_default_message">请稍后尝试重新加载</string>
    <string name="error_load">重新加载</string>
    <string name="series">系列</string>
    <string name="by">by&#160;&#160;</string>
    <string name="text_length">字数</string>
    <string name="restrict">筛选</string>
    <string name="confirm">确定</string>
    <string name="all">全部</string>
    <string name="pub">公开</string>
    <string name="pri">私密</string>
    <string name="pageNum">%1$d/%1$d</string>
    <string name="share">分享</string>
    <string name="filter_setting">屏蔽设定</string>
    <string name="follow">关注</string>
    <string name="followed">关注中</string>
    <string name="preview_user">查看个人简介</string>
    <string name="comment">评论</string>
    <string name="read_count">阅读</string>
    <string name="like">喜欢！</string>
    <string name="no_comment">暂无评论</string>
    <string name="comment_placeholder">添加评论...</string>
    <string name="related_work">相关作品</string>
    <string name="reply">回复</string>
    <string name="delete">删除</string>
    <string name="see_reply">查看回复</string>
    <string name="tags">标签</string>
    <string name="desc_label">简介</string>
    <string name="user_followed_notification">你可能也喜欢这些作品</string>
    <string name="title_related_user">已关注。去关注更多人吧。</string>
    <string name="recommended_user">推荐用户</string>
    <string name="hint_search">输入关键词</string>
    <string name="search_prompt">请输入关键字</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">删除搜索历史</string>
    <string name="tab_new_works">最新作品</string>
    <string name="tab_popular">人气顺度</string>
    <string name="tab_desc">由旧到新</string>
    <string name="search_tag_hint">你是不是要找？</string>
    <string name="close">关闭</string>
    <string name="novel_read">阅读小说</string>
    <string name="series_list">系列作品一览</string>
    <string name="novel_setting">小说设置</string>
    <string name="save_image">保存画像</string>
    <string name="novel_bookmark">小说书签</string>
    <string name="illust_bookmark">插画·漫画收藏</string>
    <string name="novel_works">小说作品</string>
    <string name="comic_works">漫画作品</string>
    <string name="illust_works">插画作品</string>
    <string name="novel_bookmarks">小说收集</string>
    <string name="works_count">%1$d件作品</string>
    <string name="friend">好P友</string>
    <string name="novel_series_previous">上一话</string>
    <string name="novel_series_next">下一话</string>
    <string name="chapter">章节</string>
    <string name="mark_page">已在第%1$d页添加书签</string>
    <string name="unmark">已删除书签</string>
    <string name="not_found">抱歉，没有找到相关结果</string>
    <string name="ranking">排行榜</string>
    <string name="ok">OK</string>
    <string name="series_previous">上一话</string>
    <string name="daily">每日</string>
    <string name="bookmark">收藏</string>
    <string name="add_like">添加为喜欢！</string>
    <string name="collection_tags">收藏的标签</string>
    <string name="collection_tags_count">%d/%d</string>
    <string name="upload_illust_hint_tag">添加标签</string>
    <string name="common_private">私密</string>
    <string name="unlike">取消喜欢</string>
    <string name="save">保存</string>
    <string name="edit_like">编辑喜欢</string>
    <string name="bookmark_failed">收藏失败</string>
    <string name="unBookmark_failed">取消收藏失败</string>
    <string name="other">未分類</string>
    <string name="no_series_next">现在还没有下一话</string>
    <string name="works_count_suffix">作品</string>
    <string name="watch_series_first">从第一话开始阅读</string>
    <string name="original">原创</string>
    <string name="concluded">完结</string>
    <string name="novel_series_expand">显示更多</string>
    <string name="novel_series_desc">%1$d作品&#8195;%2$s个字&#8195;看完需要%3$s&#8195;</string>
    <string name="watch_series_last">阅读最新一话(#%1$d)</string>
    <string name="novel_length">%s个字</string>
    <string name="profile_that_looks_from_you">已设置为私人的项目不会显示在公开信息中。</string>
    <string name="novel_series_content_count">%1$,3d作品</string>
    <string name="novel_series_content_is_muted">已被屏蔽</string>
    <string name="novel_series_content_is_mypixiv">是好P友限定作品</string>
    <string name="novel_series_content_is_restricted">该作品有浏览限制暂不能查看</string>
    <string name="novel_series_content_is_x_restricted">是R-18作品</string>
    <string name="works">作品</string>
    <string name="pixivision_summary">pixiv為不甘於沉悶生活的人提供的創作型媒體！</string>
    <string name="title_pixivision">专题</string>
    <string name="not_visible">抱歉，作品不存在</string>
    <string name="settings">设置</string>
    <string name="settings_account">帐号设置</string>
    <string name="settings_account_doesnt_have_email">没有邮箱的用户请点击这里</string>
    <string name="settings_account_has_email">拥有邮箱的用户请点击这里</string>
    <string name="settings_account_mail_address_confirm">验证</string>
    <string name="settings_account_pixiv_id_after_premium_change">确定</string>
    <string name="settings_account_pixiv_id_after_premium_description">pixiv ID一经设置将不能再修改。确定设置吗？</string>
    <string name="settings_account_pixiv_id_after_premium_title">设置您的pixiv ID</string>
    <string name="settings_advanced">详细设定</string>
    <string name="settings_current_password">现在的密码</string>
    <string name="settings_current_password_description">请输入密码</string>
    <string name="settings_current_password_title">输入密码</string>
    <string name="settings_edit_account">设置帐号信息</string>
    <string name="settings_input_account">注册帐号</string>
    <string name="settings_logout_confirm_details">当前帐号没有设置邮箱或者密码，直接退出会导致账号信息丢失。确定要退出吗？</string>
    <string name="settings_logout_confirm_title">确定要退出账号吗？</string>
    <string name="settings_mail_address">邮箱地址</string>
    <string name="settings_new_password">新密码</string>
    <string name="settings_new_password_description">请设定密码。</string>
    <string name="settings_new_password_title">设定密码</string>
    <string name="settings_notification">通知设置</string>
    <string name="settings_open_notification_settings">打开Android设定</string>
    <string name="settings_optout">不显示行为定向广告</string>
    <string name="settings_optout_footer">详情请参阅此项</string>
    <string name="settings_optout_footer_link">此项</string>
    <string name="settings_pawoo">显示Pawoo账号链接</string>
    <string name="settings_pawoo_info">Pawoo与pixiv关联时，您可以设置将Pawoo账号链接显示于pixiv个人主页。</string>
    <string name="settings_pawoo_private">不显示</string>
    <string name="settings_pawoo_public">显示</string>
    <string name="settings_pixiv_id_change">变更</string>
    <string name="settings_pixiv_id_description">您只能变更一次，且无法恢复到变更前的pixiv ID。</string>
    <string name="settings_pixiv_id_dont_change">取消变更</string>
    <string name="settings_pixiv_id_title">变更pixiv ID</string>
    <string name="settings_please_enable_notifications">若您希望接收pixiv发送的消息，请在Android系统的设定中开启通知选项。</string>
    <string name="settings_profile">个人资料设置</string>
    <string name="settings_profile_address">地址</string>
    <string name="settings_profile_comment_placeholder">自我介绍</string>
    <string name="settings_profile_image">个人头像</string>
    <string name="settings_profile_image_delete">删除</string>
    <string name="settings_profile_image_select">选择</string>
    <string name="settings_profile_job">职业</string>
    <string name="settings_profile_publicity_mypixiv">仅好P友可见</string>
    <string name="settings_profile_publicity_private">私人</string>
    <string name="settings_profile_publicity_public">向所有人公开</string>
    <string name="settings_profile_twitter_account_placeholder">Twitter ID</string>
    <string name="settings_profile_webpage_placeholder">主页</string>
    <string name="settings_register_account">注册帐号</string>
    <string name="settings_register_premium">注册成为高级会员</string>
    <string name="settings_update_account">更新帐号信息</string>
    <string name="settings_update_notification_settings">更新通知设置</string>
    <string name="settings_update_profile">更新个人资料</string>
    <string name="settings_workspace">我的作业环境</string>
    <string name="settings_workspace_chair_placeholder">椅子</string>
    <string name="settings_workspace_comment_placeholder">其他问题</string>
    <string name="settings_workspace_desk_placeholder">桌子</string>
    <string name="settings_workspace_desktop_placeholder">桌子上的东西</string>
    <string name="settings_workspace_monitor_placeholder">显示器</string>
    <string name="settings_workspace_mouse_placeholder">鼠标</string>
    <string name="settings_workspace_music_placeholder">画图时听的音乐</string>
    <string name="preference_key_act_on_settlement">act_on_settlement</string>
    <string name="preference_key_notification_notify">notification_notify</string>
    <string name="preference_key_setting_account">setting_account</string>
    <string name="preference_key_setting_logout">logout</string>
    <string name="preference_key_setting_optout">setting_optout</string>
    <string name="preference_key_setting_point">setting_point</string>
    <string name="preference_key_setting_profile">setting_profile</string>
    <string name="preference_key_setting_register_premium">setting_register_premium</string>
    <string name="preference_key_setting_workspace">setting_workspace</string>
    <string name="preference_key_support_copyright">support_copyright</string>
    <string name="preference_key_support_help">support_help</string>
    <string name="preference_key_support_law">support_law</string>
    <string name="preference_key_support_privacy_policy">support_privacy_policy</string>
    <string name="preference_key_support_terms">support_terms</string>
    <string name="point_name">积分</string>
    <string name="logout">退出</string>
    <string name="support">客服中心</string>
    <string name="help">常见问题</string>
    <string name="terms">服务条款</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="copy_right">许可证</string>
    <string name="act_on_specified_commercial_transactions">关于特定商品交易法</string>
    <string name="point_label_act_on_settlement">依据资金支付法显示</string>
</resources>