<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="preference_screen_settings"
    android:title="settings">
    <PreferenceCategory
        android:icon="@null"
        android:key="setting"
        android:title="@string/settings"
        app:allowDividerAbove="false"
        app:allowDividerBelow="true"
        >
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_account"
            android:title="@string/settings_account"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_profile"
            android:title="@string/settings_profile"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_workspace"
            android:title="@string/settings_workspace"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_notification_notify"
            android:title="@string/settings_notification"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_point"
            android:title="@string/point_name"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_optout"
            android:title="@string/settings_optout"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_register_premium"
            android:title="@string/settings_register_premium"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_setting_logout"
            android:title="@string/logout"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="true"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@null"
        android:key="support"
        android:title="@string/support"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        >
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_support_help"
            android:title="@string/help"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_support_terms"
            android:title="@string/terms"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_support_privacy_policy"
            android:title="@string/privacy_policy"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_support_copyright"
            android:title="@string/copy_right"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_support_law"
            android:title="@string/act_on_specified_commercial_transactions"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
        <Preference
            android:icon="@null"
            android:key="@string/preference_key_act_on_settlement"
            android:title="@string/point_label_act_on_settlement"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            />
    </PreferenceCategory>
</PreferenceScreen>