<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/tab_home"
            android:icon="@drawable/ic_nav_home"
            android:enabled="true"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_news"
            android:title="@string/tab_news"
            android:icon="@drawable/ic_nav_new_works"
            />
        <item
            android:id="@+id/nav_search"
            android:title="@string/tab_search"
            android:icon="@drawable/ic_nav_search"
            />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_upload"
            android:title="@string/nav_upload"
            android:icon="@drawable/ic_nav_upload"
            />
        <item
            android:id="@+id/nav_works"
            android:title="@string/nav_works"
            android:icon="@drawable/ic_nav_works"
            />
        <item
            android:id="@+id/nav_collection"
            android:title="@string/nav_collection"
            android:icon="@drawable/ic_nav_collection"
            />
        <item
            android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_nav_browsing_history"
            />
        <item
            android:id="@+id/nav_marker"
            android:title="@string/nav_marker"
            android:icon="@drawable/ic_nav_marker"
            />
    </group>

    <item
        android:id="@+id/menu_mine"
        android:title="@string/nav_mine"
        >
        <menu>
            <item
                android:id="@+id/nav_following"
                android:title="@string/nav_following"
                android:icon="@null"
                />
            <item
                android:id="@+id/nav_follower"
                android:title="@string/nav_follower"
                android:icon="@null"
                />
            <item
                android:id="@+id/nav_friend"
                android:title="@string/nav_friend"
                android:icon="@null"
                />
        </menu>
    </item>

    <item
        android:title="@string/nav_others"
        >
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback"
                android:icon="@drawable/ic_chat_bubble_black_24dp"
                />
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help"
                android:icon="@drawable/ic_nav_help"
                />
            <item
                android:id="@+id/nav_setting"
                android:title="@string/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                />
            <item
                android:id="@+id/nav_filter_setting"
                android:title="@string/nav_filter_setting"
                />
        </menu>
    </item>
</menu>