<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/bookmark"
        android:title="@string/novel_bookmark"
        app:showAsAction="always"
        android:icon="@drawable/ic_novel_marker"
        />
    <item android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_with_shadow"
        />
    <item android:id="@+id/chapter"
        android:title="@string/chapter"
        app:showAsAction="never"
        />
    <item android:id="@+id/setting"
        android:title="@string/novel_setting"
        app:showAsAction="never"
        />
    <item android:id="@+id/save"
        android:title="@string/save_image"
        app:showAsAction="never"
        />
    <item android:id="@+id/filter"
        android:title="@string/filter_setting"
        app:showAsAction="never"
        />
</menu>