<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/restrict"
            />
    </RelativeLayout>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:button="@drawable/selector_radio"
            android:buttonTint="@color/colorPrimary"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="15sp"
            />
        <RadioButton
            android:id="@+id/pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pub"
            android:button="@drawable/selector_radio"
            android:buttonTint="@color/colorPrimary"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="15sp"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/pri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pri"
            android:button="@drawable/selector_radio"
            android:buttonTint="@color/colorPrimary"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="15sp"
            />
    </RadioGroup>
    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/shape_btn_primary"
        />
</LinearLayout>