<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4d000000"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/title_register"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/md_nav_back"
            />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:orientation="vertical"
            android:background="@drawable/shape_login_panel"
            android:padding="14dp"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:hint="@string/login_hint_nick"
                    android:maxLines="1"
                    android:inputType="text"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/shape_btn_disable"
                android:text="@string/btn_start"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/register_nick_tips"
            app:layout_constraintTop_toBottomOf="@id/container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/tv_pact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/register_pact"
            app:layout_constraintTop_toBottomOf="@id/tv_tips"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/register_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            />
    </android.support.constraint.ConstraintLayout>
</layout>